2010-03-09  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc64/dl-machine.h (elf_machine_rela): Handling
	of R_SPARC_TLS_LE_* needs to use 32-bit loads and stores, not
	64-bit ones.

	* sysdeps/sparc/sparc32/memcpy.S: Fix build.

2010-03-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/internal_statvfs.c (__statvfs_getflags):
	Little follow-up patch from last change.

2010-03-06  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/internal_statvfs.c: Handle ext4 and logfs.
	* sysdeps/unix/sysv/linux/linux_fsinfo.h: Add entry for logfs.

2010-02-18  Yann Droneaud  <yann@droneaud.fr>

	* resolv/res_send.c: Fixed DEBUG statements.
	Moved tmpbuf declaration to block beginning and
	updated pointer names used in multiple DprintQ() calls

2010-02-18  H.J. Lu  <hongjiu.lu@intel.com>

	* config.make.in (config-asflags-i686): Define.
	* configure.in: Substitute libc_cv_as_i686.
	* sysdeps/i386/configure.in: Check if assembler supports -mtune=i686.
	* sysdeps/i386/i686/Makefile (CFLAGS-.oX): Add -Wa,-mtune=i686
	if assembler supports -mtune=i686.
	(ASFLAGS-.oX): Likewise.

2010-03-04  Ulrich Drepper  <drepper@redhat.com>

	* elf/elf.h (R_X86_64_SIZE32): Define.
	(R_X86_64_SIZE64): Define.

2010-03-02  Richard Guenther  <rguenther@suse.de>

	* sysdeps/x86_64/dl-machine.h (elf_machine_rela): R_X86_64_PC32
	is sign-extending.

2010-03-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/in.h: Add a few more definitions from
	the kernel headers.

2010-03-04  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc64/Implies: Add ieee754/dbl-64/wordsize-64 entry.

	* sysdeps/sparc/sparc32/sparcv8/udiv_qrnnd.S: Delete.
	* sysdeps/sparc/sparc32/udiv_qrnnd.S: Delete.

2010-03-03  David S. Miller  <davem@davemloft.net>

	* math/math_private.h (INSERT_WORDS64): Fix argument order.

2010-03-03  Aurelien Jarno  <aurelien@aurel32.net>

	* sysdeps/unix/sysv/linux/sparc/sparc64/msgrcv.c: New file.
